<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bg_crop_2">

        <include
            layout="@layout/item_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_logo_bottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top" />

        <EditText
            android:id="@+id/edit_user_number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_auth_edit"
            android:hint="@string/user_phone"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/authHintColor"
            android:textColorHint="@color/authHintColor"
            app:layout_constraintBottom_toTopOf="@+id/edit_user_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_logo_bottom"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edit_user_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_auth_edit"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/authHintColor"
            android:textColorHint="@color/authHintColor"
            app:layout_constraintBottom_toTopOf="@+id/guideline_btn_top"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/edit_user_number" />

        <include
            android:id="@+id/include_btn_enter"
            layout="@layout/btn_enter_next_actions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_btn_bottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_btn_top" />

        <TextView
            android:id="@+id/txt_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_question"
            android:textColor="@color/colorWhite100"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_register_bottom"
            app:layout_constraintEnd_toStartOf="@+id/txt_goto_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/txt_goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/goto_register"
            android:textColor="@color/colorWhite100"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_register_bottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/txt_questions" />

        <!-- GuideLines -->

        <android.support.constraint.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/common_margin_start" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/common_margin_end" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/common_margin_top" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_logo_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/common_margin_logo_bottom" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_btn_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.81" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_btn_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_register_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />
    </android.support.constraint.ConstraintLayout>
</layout>
